--- a/app/src/main/res/layout/time.xml
+++ b/app/src/main/res/layout/time.xml
@@ -27,6 +27,7 @@
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
+         android:textSize="20dp"
          android:text="시간 선택 : "/>
 
         <RadioButton
@@ -135,6 +136,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
+        android:textSize="30dp"
         android:text="선택완료"
         />
 
