--- a/app/src/main/res/layout/mainmenu.xml
+++ b/app/src/main/res/layout/mainmenu.xml
@@ -14,6 +14,7 @@
         android:gravity="center"
         android:text="메인 메뉴"
         android:textSize="25sp"
+        android:textColor="#ffffff"
         />
 
     <LinearLayout
@@ -26,21 +27,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="방 만들기"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:background="#FF9090"
+            android:textColor="#ffffff"/>
+
+
 
         <Button
             android:layout_marginTop="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="방 관리"
-            android:textSize="20sp" />
-
-        <Button
-            android:layout_marginTop="30dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="친구 관리"
-            android:textSize="20sp" />
+            android:text="친구 목록"
+            android:textSize="20sp"
+            android:background="#FF9090"
+            android:textColor="#ffffff"/>
 
     </LinearLayout>
 </LinearLayout>
